# tail_mate

./: .gitmodules  README.md
assets/tb3_aruco_setup/: README.md  model.sdf
assets/tb3_texture_change/: README.md  model.sdf
install/: local_setup.sh  setup.sh
install/followme_drone/lib/followme_drone/: drive_node  drone_patrol_controller  followme_drone_node  multi_waypointspython.py  tb3_follower  tb3_nav_node
install/followme_drone/share/ament_index/resource_index/parent_prefix_path/: followme_drone
install/followme_drone/share/followme_drone/: package.bash  package.dsv  package.ps1  package.sh  package.zsh
install/followme_drone/share/followme_drone/launch/: followme_drone.launch.py  navigation.launch copy.py  p1_b_tb3_drone_gazebo.launch.py  spy_drone.launch.py
install/followme_drone/share/followme_drone/maps/: tb3_map.pgm
install/followme_drone/share/followme_drone/rviz/: mapping.rviz
install/followme_drone/share/followme_drone/worlds/: laboratory.world  museum.world
install/sjtu_drone_bringup/share/sjtu_drone_bringup/: package.sh
install/sjtu_drone_control/share/sjtu_drone_control/: package.sh
install/sjtu_drone_description/share/sjtu_drone_description/: package.sh
install/sjtu_drone_description/share/sjtu_drone_description/urdf/: sjtu_drone.urdf.xacro
install/turtlebot3_fake_node/lib/turtlebot3_fake_node/: turtlebot3_fake_node
install/turtlebot3_fake_node/share/turtlebot3_fake_node/: local_setup.sh  package.sh
install/turtlebot3_gazebo/share/turtlebot3_gazebo/: local_setup.sh  package.sh
install/turtlebot3_gazebo/share/turtlebot3_gazebo/models/turtlebot3_waffle_pi/: model.sdf
install/turtlebot3_simulations/share/ament_index/resource_index/parent_prefix_path/: turtlebot3_simulations
install/turtlebot3_simulations/share/turtlebot3_simulations/: local_setup.sh  package.sh
log/: latest_build
src/followme_drone/: CMakeLists.txt  package.xml
src/followme_drone/include/: drone_aruco_tracking.hpp  drone_motion_controller.hpp  drone_patrol_controller.hpp
src/followme_drone/launch/: drone_patrol.launch.py  followme_drone.launch.py  mapping.launch.py  navigation.launch.py  trial.launch.py
src/followme_drone/maps/: tb3_map.yaml
src/followme_drone/nav2/: tb3_nav2_params.yaml
src/followme_drone/scripts/: drive_node.cpp  drone_aruco_tracking.cpp  drone_motion_controller.cpp  drone_patrol_controller.cpp  followme_drone_node.cpp  multi_waypoints.cpp  single_goal_nav.py  tb3_follower.cpp  tb3_follower1.cpp  waypoint_navigation.cpp
src/followme_drone/scripts/nav_scripts_python/: single_point_nav.py  waypoint_nav.py
src/followme_drone/scripts/tb3_detection_files/: color_detection.cpp  contour_detection.cpp  orb_detection.cpp  template_detection.cpp
src/followme_drone/worlds/: empty.world
